Revised Version 1 data wrangling

--- a/Capstone_2_UFO_Sightings_Data_Wrangling_Navdeep_Raj_final.ipynb
+++ b/Capstone_2_UFO_Sightings_Data_Wrangling_Navdeep_Raj_final.ipynb
@@ -1947,7 +1947,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "forward-immune",
+   "id": "significant-sentence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1957,7 +1957,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "reserved-antigua",
+   "id": "second-field",
    "metadata": {},
    "outputs": [
     {
@@ -1986,7 +1986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "smooth-treasury",
+   "id": "assisted-unknown",
    "metadata": {},
    "source": [
     "### Cleanig shape column and checking if Description column has some info on shape where Shape value is NUll"
@@ -2180,7 +2180,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "entertaining-norway",
+   "id": "forbidden-uncle",
    "metadata": {},
    "outputs": [
     {
@@ -2328,7 +2328,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "curious-merit",
+   "id": "blocked-field",
    "metadata": {},
    "outputs": [
     {
@@ -2521,7 +2521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mathematical-hurricane",
+   "id": "chicken-aggregate",
    "metadata": {},
    "source": [
     "### There are around 1500 null values in Shape Final column so after dropping thise rows final count of rows is 83392"
@@ -2530,7 +2530,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "mineral-ordinance",
+   "id": "mineral-binding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2542,7 +2542,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "flying-relevance",
+   "id": "seasonal-matthew",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2552,7 +2552,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "buried-scholar",
+   "id": "bulgarian-original",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2564,7 +2564,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "cooked-dodge",
+   "id": "southwest-meeting",
    "metadata": {},
    "outputs": [
     {
@@ -2587,7 +2587,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "thorough-theology",
+   "id": "adverse-playlist",
    "metadata": {},
    "outputs": [
     {
@@ -2620,7 +2620,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "noticed-raising",
+   "id": "fatal-margin",
    "metadata": {},
    "outputs": [
     {
@@ -2841,7 +2841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "relevant-atlantic",
+   "id": "opposed-realtor",
    "metadata": {},
    "source": [
     "## Getting Year and Month From Spotted datetime"
@@ -2850,7 +2850,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "minimal-russian",
+   "id": "expected-shooting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2860,7 +2860,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "spectacular-potato",
+   "id": "reflected-rouge",
    "metadata": {},
    "outputs": [
     {
@@ -3008,7 +3008,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "precious-qatar",
+   "id": "lucky-deadline",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3018,7 +3018,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "pleased-heath",
+   "id": "entitled-bridal",
    "metadata": {},
    "outputs": [
     {
@@ -3350,17 +3350,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dominant-sarah",
+   "cell_type": "markdown",
+   "id": "homeless-sociology",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Credits to https://github.com/Dascienz/ufo-sightings/blob/master for some help I got from there"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "underlying-interim",
+   "id": "signal-daniel",
    "metadata": {},
    "outputs": [],
    "source": []
